2014-09-18  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/session.c (info_select_reference): When following a reference
	in a footnotes window, try to switch to a window containing a node
	from the file.

2014-09-16  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/indices.c (info_index_apropos): Mark apropos node with
	N_Unstored.
	(info_indices_of_file_buffer): Free index_index variable before
	overwriting it.
	(apropos_in_all_indices): Free return value of get_dir_node before
	returning.

2014-09-15  Gavin Smith  <gavinsmith0123@gmail.com>

	* doc/info-stnd.text (Scrolling Commands): PageUp and PageDown can
	change the node (changed in 4.12 release).

2014-09-14  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/nodes.h (N_Unstored): New flag.
	* info/session.c (info_split_window): Copy 'nodename' and 'references'
	fields if node is marked with N_Unstored, instead of N_IsInternal.
	* info/nodemenu.c (list_visted_nodes),
	* info/indices.c (info_virtual_index),
	* info/footnotes.c (make_footnotes_node): Mark generated nodes with
	N_Unstored.
	* info/dir.c (build_dir_node),
	* info/man.c (get_manpage_node): Mark generated nodes with
	N_IsInternal, to disable attempting to get another node in a
	containing file.

2014-09-13  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info-utils.c (copy_converting) <EINVAL>: Try converting again
	if input was incomplete, instead of degrading to ASCII.

2014-09-12  Gavin Smith  <gavinsmith0123@gmail.com>

	* info/info.h: Don't include other header files.
	* info: All *.c and *.h files: Include necessary header files.
	Include "doc.h" instead of "infomap.h" to avoid problem with
	header file include cycle.
	* info/footnotes.c (info_get_or_remove_footnotes): Call info_error
	instead of inform_in_echo_area.
	* info/info.h, info/session.h (DECLARE_INFO_COMMAND): Macro moved
	between files.
	* info/info.h, info/session.h: Declarations of read_function_name,
	show_error_node moved.